--- a/Task1/app/src/main/res/layout/content_main.xml
+++ b/Task1/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:id="@+id/subtitle">
+        android:id="@+id/subtitle"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
