fix some mistakes

--- a/Task1/app/src/main/res/layout/content_main.xml
+++ b/Task1/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:fillViewport="true"
-    tools:context="com.yalantis.task1.Main"
+    tools:context=".DetailTaskActivity"
     tools:showIn="@layout/activity_main"
     android:background="@color/main_background">
 <RelativeLayout
@@ -19,7 +19,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:id="@+id/subtitle">
+        android:id="@+id/subtitle"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
