--- a/Task2/app/src/main/res/layout/app_bar_task.xml
+++ b/Task2/app/src/main/res/layout/app_bar_task.xml
@@ -14,24 +14,24 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            app:titleEnabled="false"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed" >
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:layout_collapseMode="parallax"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary" />
+                android:background="?attr/colorPrimary"
+                app:layout_collapseMode="parallax" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
                 android:layout_marginLeft="@dimen/tablayout_margin"
                 android:layout_marginRight="@dimen/tablayout_margin"
-                android:layout_gravity="bottom"
                 android:background="@color/colorPrimary"
                 app:tabContentStart="0dp"
                 app:tabGravity="fill"
@@ -57,9 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/mango"
         android:scaleType="center"
-        android:src="@drawable/f_a_b_2_x1"
-        app:layout_behavior="com.internship.yalantis.task2.utils.HideFabOnScroll"/>
+        android:src="@drawable/ic_fab_button"
+        app:backgroundTint="@color/mango"
+        app:layout_behavior="com.internship.yalantis.task2.utils.HideFabOnScroll" />
 
 </android.support.design.widget.CoordinatorLayout>
