--- a/Task2/app/src/main/res/layout/fragment_tasks.xml
+++ b/Task2/app/src/main/res/layout/fragment_tasks.xml
@@ -5,9 +5,8 @@
     tools:context=".fragments.TaskFragment">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/task_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/task_recycler">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content" />
 
 </android.support.v4.widget.NestedScrollView>
