--- a/Task2/app/src/main/res/layout/holder_item.xml
+++ b/Task2/app/src/main/res/layout/holder_item.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image_container"
     android:layout_width="wrap_content"
     android:layout_height="@dimen/image_height"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/image_container"
-        android:scaleType="matrix"/>
-</LinearLayout>
+    android:scaleType="matrix" />
