--- a/Task2/app/src/main/res/layout/task_recycler_item.xml
+++ b/Task2/app/src/main/res/layout/task_recycler_item.xml
@@ -9,132 +9,149 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.Task">
+    tools:context=".activities.TaskActivity">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/cardview_height"
         app:cardCornerRadius="@dimen/cardview_corner_radius">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="@dimen/cardview_left_container_width"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="2"
                 android:layout_marginBottom="@dimen/cardview_margin"
-                android:layout_marginTop="@dimen/cardview_margin">
+                android:layout_marginTop="@dimen/cardview_margin"
+                android:orientation="vertical"
+                android:weightSum="2">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
+
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/pie_chart"
-                        android:alpha="0.54"
                         android:id="@+id/main_image_container"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:alpha="0.54"
+                        android:src="@drawable/ic_pie_chart" />
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
+
                     <ImageView
+                        android:id="@+id/like_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/social"
-                        android:scaleType="center"
-                        android:alpha="0.19"
+                        android:layout_alignParentBottom="true"
                         android:layout_alignParentLeft="false"
                         android:layout_alignParentStart="false"
                         android:layout_marginLeft="@dimen/cardview_like_margin"
-                        android:id="@+id/like_container"
-                        android:layout_alignParentBottom="true" />
+                        android:alpha="0.19"
+                        android:scaleType="center"
+                        android:src="@drawable/ic_social" />
+
                     <TextView
+                        android:id="@+id/like_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/like_count"
-                        android:alpha="0.23"
-                        android:text="49"
-                        android:textSize="@dimen/main_text"
-                        android:fontFamily="sans-serif"
-                        android:textStyle="bold"
+                        android:layout_alignParentBottom="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/cardview_like_count_margin"
-                        android:layout_alignParentBottom="true" />
+                        android:alpha="0.23"
+                        android:fontFamily="sans-serif"
+                        android:text="49"
+                        android:textSize="@dimen/main_text"
+                        android:textStyle="bold" />
                 </RelativeLayout>
             </LinearLayout>
+
             <View
-                android:background="@color/black"
-                android:alpha="0.11"
                 android:layout_width="1dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:alpha="0.11"
+                android:background="@color/black" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:layout_marginBottom="@dimen/cardview_margin"
                 android:layout_marginLeft="@dimen/cardview_margin"
-                android:layout_marginTop="@dimen/cardview_margin"
                 android:layout_marginRight="@dimen/cardview_margin"
-                android:layout_marginBottom="@dimen/cardview_margin">
+                android:layout_marginTop="@dimen/cardview_margin"
+                android:orientation="vertical">
+
                 <LinearLayout
+                    android:id="@+id/mTitle"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/cardview_title_height"
-                    android:id="@+id/mTitle">
+                    android:layout_height="@dimen/cardview_title_height">
+
                     <TextView
+                        android:id="@+id/item_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/sample_title"
-                        android:textSize="@dimen/item_title"
                         android:fontFamily="sans-serif"
-                        android:textStyle="normal"
-                        android:id="@+id/item_title"
-                        android:textColor="@color/black"/>
+                        android:text="@string/sample_title"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/item_title"
+                        android:textStyle="normal" />
                 </LinearLayout>
+
                 <LinearLayout
+                    android:id="@+id/main_content"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/cardview_content_height"
-                    android:layout_marginTop="@dimen/cardview_main_content_margin"
-                    android:id="@+id/main_content"
-                    android:layout_below="@+id/mTitle">
+                    android:layout_below="@+id/mTitle"
+                    android:layout_marginTop="@dimen/cardview_main_content_margin">
+
                     <TextView
+                        android:id="@+id/item_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/main_text"
+                        android:alpha="0.54"
                         android:fontFamily="sans-serif-regular"
                         android:text="@string/sample_item"
                         android:textColor="@color/black"
-                        android:alpha="0.54"
-                        android:id="@+id/item_content" />
+                        android:textSize="@dimen/main_text" />
                 </LinearLayout>
+
                 <RelativeLayout
+                    android:id="@+id/mDate"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/cardview_content_height"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginRight="@dimen/cardview_date_margin"
-                    android:layout_marginTop="@dimen/cardview_margin"
-                    android:id="@+id/mDate"
-                    android:layout_alignParentBottom="true">
+                    android:layout_marginTop="@dimen/cardview_margin">
+
                     <TextView
+                        android:id="@+id/item_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:alpha="0.54"
                         android:text="@string/sample_date"
-                        android:textSize="@dimen/main_text"
                         android:textColor="@color/black"
-                        android:alpha="0.54"
-                        android:id="@+id/item_date" />
+                        android:textSize="@dimen/main_text" />
+
                     <TextView
+                        android:id="@+id/item_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/sample_time"
-                        android:textSize="@dimen/main_text"
-                        android:textColor="@color/black"
-                        android:alpha="0.54"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
-                        android:id="@+id/item_time" />
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentTop="true"
+                        android:alpha="0.54"
+                        android:text="@string/sample_time"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/main_text" />
                 </RelativeLayout>
 
             </RelativeLayout>
