--- a/Task2/app/src/main/res/layout/activity_detail_task.xml
+++ b/Task2/app/src/main/res/layout/activity_detail_task.xml
@@ -7,6 +7,4 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.internship.yalantis.task2.activities.DetailTaskActivity">
-
-</RelativeLayout>
+    tools:context="com.internship.yalantis.task2.activities.DetailTaskActivity" />
