--- a/Task2/app/src/main/res/layout/nav_header_task.xml
+++ b/Task2/app/src/main/res/layout/nav_header_task.xml
@@ -11,19 +11,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:alpha="0.69"
+        android:fontFamily="sans-serif"
+        android:gravity="center_vertical"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_bar_title"
-        android:gravity="center_vertical"
-        android:fontFamily="sans-serif"
-        android:textSize="24sp"
-        android:alpha="0.69"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textStyle="bold"
-        android:layout_gravity="center_vertical" />
-
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
